ISS-12-1-38 - Fixed Internal Nav Spacing

--- a/styles/request-for-starterkit.css
+++ b/styles/request-for-starterkit.css
@@ -176,3 +176,10 @@
         max-width: 500px;
     }
 }
+
+@media (min-width: 1024px) and (max-width: 1200px) {
+    [data-module=PageSubnav] .jumpbtn {
+        margin-top: -100px !important;
+        margin-bottom: 50px;
+    }
+}
